<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
             android:id="@+id/nav_home"
              android:title="@string/menu_home"
            android:checked="true"
            app:iconTint="@drawable/selector"/>
        <item
             android:id="@+id/nav_kwait_elkhir"
              android:title="@string/app_name"
            app:iconTint="@drawable/selector"/>
        <item
            android:id="@+id/nav_projects"
             android:title="@string/projects"
            app:iconTint="@drawable/selector"/>
        <item
            android:id="@+id/nav_partners"
            android:title="@string/partners" />
        <item
            android:id="@+id/nav_campaign"
            android:title="@string/campaign" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/news" />
        <item
             android:id="@+id/nav_donation"
            android:title="@string/my_donations" />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/contact_us" />
<!--        <item-->
<!--            android:id="@+id/nav_myProfile"-->
<!--            android:title="@string/my_profile" />-->
        <item
            android:id="@+id/nav_lang"
            android:title="@string/lang" />

    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:visible="false"
            android:id="@+id/nav_logout"
            android:title="@string/logOut">

        </item>
        <item
            android:visible="false"
            android:id="@+id/nav_login"
            android:title="@string/login">

        </item>
    </group>
</menu>