<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="ltr"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="16dp"
                    android:text="@string/constractions"
                    android:textColor="@color/green_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login_constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintTop_toBottomOf="@+id/textView4">

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        style="@style/requests_form_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:scaleType="fitXY"
            android:src="@drawable/email_icon" />

        <AutoCompleteTextView
            android:id="@+id/email"
            style="@style/requests_form_edit_text"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_toEndOf="@+id/emailIcon"
            android:layout_toRightOf="@+id/emailIcon"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black_trans_dark"
            android:textSize="13sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        style="@style/requests_form_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:scaleType="fitXY"
            android:src="@drawable/mobile_icon" />

        <AutoCompleteTextView
            android:id="@+id/phone"
            style="@style/requests_form_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/phoneIcon"
            android:layout_marginStart="35dp"
            android:layout_toRightOf="@+id/phoneIcon"
            android:autofillHints="@string/user_name"
            android:hint="@string/phoneNumber"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black_trans_dark"
            android:textSize="13sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/paymentWay"
                    android:textColor="@color/green_700"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_constraint" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ways"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Button
                    android:id="@+id/donation"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_above="@+id/backImage"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_background"
                    android:text="@string/donation_now"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ways" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>