<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">



        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:layoutDirection="ltr"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <RelativeLayout
                    style="@style/requests_form_linear"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/user"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentStart="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/username_icon" />

                    <AutoCompleteTextView
                        android:id="@+id/userName"
                        style="@style/requests_form_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_toRightOf="@+id/user"
                        android:autofillHints="@string/user_name"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ غظضذخثتشرقصجفعسنملةىكيطئءؤحزوهدبا 0123456789"
                        android:hint="@string/user_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_trans_dark"
                        android:textSize="13sp" />

                </RelativeLayout>



                <RelativeLayout
                    style="@style/requests_form_linear"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/emailIcon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentStart="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/email_icon" />

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        style="@style/requests_form_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_toRightOf="@+id/emailIcon"
                        android:autofillHints="@string/email"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_trans_dark"
                        android:textSize="13sp" />


                </RelativeLayout>

                <RelativeLayout
                    style="@style/requests_form_linear"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fName"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentStart="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/firstname_icon" />

                    <AutoCompleteTextView
                        android:id="@+id/fristName"
                        style="@style/requests_form_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="40dp"
                         android:autofillHints="@string/fname"
                        android:hint="@string/fname"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_trans_dark"
                        android:textSize="13sp" />


                </RelativeLayout>

                <RelativeLayout
                    style="@style/requests_form_linear"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/lname"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/familyname_icon" />

                    <AutoCompleteTextView
                        android:id="@+id/confirmPassword"
                        style="@style/requests_form_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="40dp"
                         android:autofillHints="@string/lname"
                        android:hint="@string/lname"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_trans_dark"
                        android:textSize="13sp" />


                </RelativeLayout>
                <RelativeLayout
                    style="@style/requests_form_linear"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/phoneIcon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentStart="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/phone_call" />

                    <AutoCompleteTextView
                        android:id="@+id/phone"
                        style="@style/requests_form_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_toRightOf="@+id/phoneIcon"
                        android:autofillHints="@string/user_name"
                        android:hint="@string/phoneNumber"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_trans_dark"
                        android:textSize="13sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/logIn"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/save"
                    android:textColor="@color/white"></Button>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>